@@ -1,0 +1,7 @@
+You may freely use, modify, and redistribute the hdparm program,
+as either binary or source, or both.
+
+The only condition is that my name and copyright notice
+remain in the source code as-is.
+
+Mark Lord (mlord@pobox.com)
