@@ -27,7 +27,7 @@ hdparm: hdparm.o identify.o hdparm.h
 	$(CC) $(LDFLAGS) -o hdparm hdparm.o identify.o
  
 install: all hdparm.8
-	if [ -f $(DESTDIR)$(sbindir)/hdparm ]; then rm -f $(DESTDIR)$(sbindir)/hdparm ; fi 
+	if [ -f $(DESTDIR)$(sbindir)/hdparm ]; then rm -f $(DESTDIR)$(sbindir)/hdparm ; fi
 	if [ -f $(DESTDIR)$(mandir)/man8/hdparm.8 ]; then rm -f $(DESTDIR)$(mandir)/man8/hdparm.8 ;\
 	elif [ -f $(DESTDIR)$(oldmandir)/man8/hdparm.8 ]; then rm -f $(DESTDIR)$(oldmandir)/man8/hdparm.8 ; fi
 	$(INSTALL_PROGRAM) hdparm $(DESTDIR)$(sbindir)/hdparm
